--- a/MySite/style.css
+++ b/MySite/style.css
@@ -153,13 +153,13 @@ figure:hover figcaption {
 	box-shadow:5px 10px 10px 10px rgba(0,0,0,.5);
 	border-radius:10px;
 }
- /*@media screen and (min-width:980px){
+ @media screen and (min-width:980px){
 		div{
 		box-sizing:border-box;
 	    transition:.5s ease-in-out;	
         width:10%;		
 		}
- }	*/	
+ }		
  
  
 		
