--- a/MySite/style.css
+++ b/MySite/style.css
@@ -155,12 +155,12 @@ figure:hover figcaption {
 	border-radius:10px;	
 	overflow: hidden;
 }
- /*@media (max-width:980px){
-		
-		*,*:before,*:before{
-		box-sizing:border-box;
-	transition:.5s ease-in-out;}
-	*/
+@media (max-width:980px){		
+	body{
+width: 100vw;}
+.contacts{width: :100vw;}
+	}
+	
 	
 	
 .portfolio figcaption {
