--- a/MySite/style.css
+++ b/MySite/style.css
@@ -1,292 +1,112 @@
-	/* reset browser styles */
-	
-	html,
-	body,
-	div,
-	span,
-	object,
-	iframe,
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6,
-	p,
-	blockquote,
-	pre,
-	a,
-	abbr,
-	acronym,
-	address,
-	big,
-	cite,
-	code,
-	del,
-	dfn,
-	em,
-	img,
-	ins,
-	kbd,
-	q,
-	s,
-	samp,
-	small,
-	strike,
-	strong,
-	sub,
-	sup,
-	tt,
-	var,
-	b,
-	u,
-	i,
-	center,
-	dl,
-	dt,
-	dd,
-	ol,
-	ul,
-	li,
-	fieldset,
-	form,
-	label,
-	legend,
-	table,
-	caption,
-	tbody,
-	tfoot,
-	thead,
-	tr,
-	th,
-	td,
-	article,
-	aside,
-	canvas,
-	details,
-	embed,
-	figure,
-	figcaption,
-	footer,
-	header,
-	hgroup,
-	menu,
-	nav,
-	output,
-	ruby,
-	section,
-	summary,
-	time,
-	mark,
-	audio,
-	video {
-	    margin: 0;
-	    padding: 0;
-	    border: 0;
-	    font-size: 100%;
-	    vertical-align: baseline;
+	body {
+	    text-decoration: none;
+	    height: 100vh;
+	    margin: 0 auto;
+	    width: 60%;
+	    background: linear-gradient(to top, rgba(0, 102, 255, 1), rgba(200, 200, 200, .7));
+	    background-image: url(pic/futuristic-1.jpg);
 	}
 	
-	article,
-	aside,
-	details,
-	figcaption,
-	figure,
-	footer,
-	header,
-	hgroup,
-	menu,
-	nav,
-	section {
+	figure:hover figcaption {
+	    opacity: 1;
+	}
+	
+	.portfolio figure {
+	    border: 2px solid gray;
+	    float: left;
+	    display: block;
+	    width: 14vw;
+	    margin-left: 7%;
+	    position: relative;
+	    opacity: 1;
+	    box-shadow: 5px 10px 10px 10px rgba(0, 0, 0, .5);
+	    border-radius: 10px;
+	    overflow: hidden;
+	}
+	
+	.portfolio figcaption {
+	    position: absolute;
+	    top: 25%;
+	    bottom: 15%;
+	    left: 0;
+	    right: 0;
+	    background-color: rgba(0, 102, 153, .3);
+	    padding: 10px;
+	    font-family: Titillium, Arial, sans-serif;
+	    font-size: .9em;
+	    font-weight: 400;
+	    color: white;
+	    opacity: 0;
+	    -webkit-transition: opacity .75s ease-out;
+	    -moz-transition: opacity .75s ease-out;
+	    -o-transition: opacity .75s ease-out;
+	    transition: opacity .75s ease-out;
+	}
+	
+	figcaption strong {
+	    font-weight: 700;
 	    display: block;
 	}
 	
-	body {
-	    line-height: 1.2;
+	.wrapper {
+	    height: 100vh;
+	    background: radial-gradient(circle farthest-corner at 190px 170px, rgb(255, 255, 255), rgb(7, 41, 104));
+	    box-shadow: 10px 10px 20px 30px rgba(50, 0, 255, .5);
 	}
 	
-	ol {
-	    padding-left: 1.4em;
-	    list-style: none;
+	h1,
+	h2 {
+	    font-size: 2em;
+	    text-align: center;
+	    font-family: Georgia;
+	    color: rgb(249, 251, 252);
+	    margin: 1px;
+	    padding: 5px;
+	    text-shadow: 0 0 5px rgb(28, 2, 75);
 	}
 	
-	a {
-	    text-decoration: none;
+	.text {
+	    text-indent: .9em;
+	    margin: 35px 25px;
 	}
 	
-	ul {
-	    padding-left: 1.4em;
-	    list-style: none;
-	    text-decoration: none;
+	#myFoto {
+	    width: 15%;
+	    margin: 10px;
+	    float: left;
 	}
 	
-	table {
-	    border-collapse: collapse;
-	    border-spacing: 0;
+	#contacts a {
+	    color: rgb(138, 166, 241);
+	    -webkit-animation: blink 1s linear infinite;
+	    animation: blink 1.3s linear infinite;
 	}
-* {
-  box-sizing: border-box;
-}
-	/* end reset browser styles */
-
-body{
-	text-decoration: none;
-height:100vh;
-margin:0 auto;
-width:60%;
-background: linear-gradient(to top, rgba(0, 102, 255, 1), rgba(200, 200, 200, .7));
-background-image:url(pic/futuristic-1.jpg);
-
-}
-
-figure:hover figcaption {
-	opacity: 1;	
 	
-}
-
-.portfolio figure {
-	border:2px solid gray;
-	float:left;
-	display: block;
-	width: 14vw;	
-	margin-left:7%;
-	position: relative;
-	opacity: 1;
-	box-shadow:5px 10px 10px 10px rgba(0,0,0,.5);
-	border-radius:10px;	
-	overflow: hidden;
-}
-
+	#contacts {
+	    width: 60%;
+	    -webkit-animation: blink 1s linear infinite;
+	    animation: blink 1.3s linear infinite;
+	    font-family: Berlin Sans FB;
+	    margin: 5px auto;
+	    position: fixed;
+	    bottom: 0;
+	    background: radial-gradient(circle farthest-corner at 150px 170px, rgb(7, 41, 104), rgb(255, 255, 255));
+	}
 	
-.portfolio figcaption {
-	position: absolute;
-	top: 25%;
-	bottom: 15%;
-	left:0;
-	right:0;	
-	background-color: rgba(0,102,153,.3);	
-	padding: 10px;
-	
-	font-family: Titillium, Arial, sans-serif;
-	font-size: .9em;
-	font-weight: 400;
-	color: white;
-	opacity: 0;
-	-webkit-transition: opacity .75s ease-out;
-	-moz-transition: opacity .75s ease-out;
-	-o-transition: opacity .75s ease-out;
-	transition: opacity .75s ease-out;
-	
-}
-	
-	figcaption strong {
-	font-weight: 700;
-	display: block;
-}
-.wrapper{
-height: 100vh;
-background: radial-gradient(circle farthest-corner at 190px 170px, rgb(255, 255, 255),rgb(7,41, 104));
-box-shadow:10px 10px 20px 30px rgba(50,0,255,.5);
-}
-h1,h2{
-	font-size:2em;
-	text-align:center;
-	font-family:Georgia;
-	color:rgb(249, 251, 252);
-	margin:1px;
-	padding:5px;
-	text-shadow: 0 0 5px rgb(28, 2, 75); 
-	
-}
-
-.text{	
-	text-indent:.9em;	
-	margin:35px 25px;
-}
-
-#myFoto{
-width:15%;
-margin:10px;
-float:left;
-}
-
-#contacts a{color: rgb(138, 166, 241);
-	-webkit-animation: blink 1s linear infinite;
-	animation: blink 1.3s linear infinite;}	
-#contacts {	
-	width:60%;
-	 -webkit-animation: blink 1s linear infinite;
-	 animation: blink 1.3s linear infinite;
-	font-family:Berlin Sans FB;
-	margin:5px auto;	
-	position: fixed;
-	bottom: 0;		
-	background: radial-gradient(circle farthest-corner at 150px 170px, rgb(7,41, 104),rgb(255, 255, 255));
-		
-}
-@-webkit-keyframes blink {
+	@-webkit-keyframes blink {
 	    0% {
-	        color: rgb(0,0,255);
-	    }		
-		
-	    100% {
-	        color: rgb(255,255,255);
+	        color: rgb(0, 0, 255);
 	    }
-}
-.portfolio img{
-width:14vw;
-border-radius:10px;
-
-}
-
-.portfolio{
-	margin-bottom:25%;
-}
-	
-/*mobil version start*/
-@media (max-width:980px){	
-	
-	
-	body, .wrapper{
-		background-image: none;
-		margin:0;
-		padding:0;
-		width: 100vw;
-		height:100%;
-		background: radial-gradient(circle farthest-corner at 190px 70px, rgb(255, 255, 255),rgb(7,41, 104));
-		background-attachment:fixed;
-		
+	    100% {
+	        color: rgb(255, 255, 255);
+	    }
 	}
-	#contacts{
-	width:100vw;
-	margin-top: 5px;
-	clear: both; 
-		}
-	#myFoto{
-		display:none;}	
-		.portfolio figure{
-			width:33.3vw;
-			height:13vh;
-			margin:0;
-			margin-bottom: 55%;
-		padding: 0;
-		position: relative;
-		bottom: 0;	
-		border-radius: 0;	
-		}
-		.portfolio img{
-			width:33.3vw;
-			height:13vh;
-		border-radius: 0;}
-			
-			.portfolio figcaption {
-				position: absolute;
-				top: 0;
-				bottom: 0%;
-				left:0;
-				right:0;	
-			}
-
-
-	}	
-
+	
+	.portfolio img {
+	    width: 14vw;
+	    border-radius: 10px;
+	}
+	
+	.portfolio {
+	    margin-bottom: 25%;
+	}
