--- a/MySite/style.css
+++ b/MySite/style.css
@@ -1,17 +1,19 @@
 	        body {
-	            text-decoration: none;
-	            height: 100vh;
-	            margin: 0 auto;
-	            width: 100%;
+	            text-decoration: none;	                        
 	            font-family: 'Jura', sans-serif;
 	        }
 	        
-	        .wrapper {
-	            height: 100vh;
+	        .wrapper {	      
+				background: url(pic/s1200.jpg) fixed;
+				background-repeat: no-repeat;
+				background-size: cover;
+				background-repeat: no-repeat;
+
 	        }
 	        .main{
 				margin-top:0;
 				border:1px solid hsl(0, 25%, 98%);}
+
 	        .menu li {
 	            float: left;
 	            margin:0 20px;
@@ -32,23 +34,15 @@
 	        
 	        .portfolio figure {
 	            border: 2px solid gray;
-	            float: left;
-	            display: block;
-	            width: 14vw;
-	            margin-left: 7%;
-	            position: relative;
+	             width: 14vw;
+	            margin-left: 7%;				
 	            opacity: 1;
 	            box-shadow: 5px 10px 10px 10px rgba(0, 0, 0, .5);
 	            border-radius: 10px;
-	            overflow: hidden;
+	           
 	        }
 	        
-	        .portfolio figcaption {
-	            position: absolute;
-	            top: 25%;
-	            bottom: 15%;
-	            left: 0;
-	            right: 0;
+	        .portfolio figcaption {  	            
 	            background-color: rgba(0, 102, 153, .3);
 	            padding: 10px;
 	            font-family: Titillium, Arial, sans-serif;
@@ -100,13 +94,10 @@
 	        }
 	        
 	        #contacts {
-	            width: 60%;
+	           
 	            -webkit-animation: blink 1s linear infinite;
 	            animation: blink 1.3s linear infinite;
-	            font-family: Berlin Sans FB;
-	            margin: 5px auto;
-	            position: fixed;
-	            bottom: 0;
+	            font-family: Berlin Sans FB;	          
 	            background: radial-gradient(circle farthest-corner at 150px 170px, rgb(7, 41, 104), rgb(255, 255, 255));
 	        }
 	        
@@ -124,13 +115,11 @@
 	            border-radius: 10px;
 	        }
 	        
-	        .portfolio {
-	            margin-bottom: 25%;
-				position:relative;
-	        }
+	       
 .galery1{
-margin:20px;
+margin:200px;
 border-bottom: 1px solid white;
+height:15vh;
 }
 
 /*slaidshow*/
