--- a/MySite/style.css
+++ b/MySite/style.css
@@ -1,5 +1,6 @@
 	        body {
-	            text-decoration: none;	                        
+	            text-decoration: none;
+	                        
 	            font-family: 'Jura', sans-serif;
 	        }
 	        
@@ -13,7 +14,6 @@
 	        .main{
 				margin-top:0;
 				border:1px solid hsl(0, 25%, 98%);}
-
 	        .menu li {
 	            float: left;
 	            margin:0 20px;
@@ -33,16 +33,22 @@
 	        }
 	        
 	        .portfolio figure {
-	            border: 2px solid gray;
-	             width: 14vw;
+	            border: 2px solid gray;	            
+	            display: inline-flex;
+	            width: 14vw;
 	            margin-left: 7%;				
 	            opacity: 1;
 	            box-shadow: 5px 10px 10px 10px rgba(0, 0, 0, .5);
 	            border-radius: 10px;
-	           
+	            overflow: hidden;
 	        }
 	        
-	        .portfolio figcaption {  	            
+	        .portfolio figcaption {
+	            position: absolute;
+	            top: 25%;
+	            bottom: 15%;
+	            left: 0;
+	            right: 0;
 	            background-color: rgba(0, 102, 153, .3);
 	            padding: 10px;
 	            font-family: Titillium, Arial, sans-serif;
@@ -94,10 +100,13 @@
 	        }
 	        
 	        #contacts {
-	           
+	            
 	            -webkit-animation: blink 1s linear infinite;
 	            animation: blink 1.3s linear infinite;
-	            font-family: Berlin Sans FB;	          
+	            font-family: Berlin Sans FB;
+	            margin: 5px auto;
+	            
+	            bottom: 0;
 	            background: radial-gradient(circle farthest-corner at 150px 170px, rgb(7, 41, 104), rgb(255, 255, 255));
 	        }
 	        
@@ -115,9 +124,12 @@
 	            border-radius: 10px;
 	        }
 	        
-	       
+	        .portfolio {
+	            margin-bottom: 25%;
+				position:relative;
+	        }
 .galery1{
-margin:200px;
+margin:20px;
 border-bottom: 1px solid white;
 height:15vh;
 }
