--- a/MySite/style.css
+++ b/MySite/style.css
@@ -1,13 +1,20 @@
 	            body {
 	                text-decoration: none;
 	                font-family: 'Jura', sans-serif;
+background: url(pic/wFa5GBZ7dl0.jpg) fixed;
+background-repeat: no-repeat;
+	                background-size: cover;
+	                background-repeat: no-repeat;
 	            }
 	            
 	            .wrapper {
-	                background: url(pic/s1200.jpg) fixed;
+	                /*background: url(pic/s1200.jpg) fixed;
 	                background-repeat: no-repeat;
 	                background-size: cover;
-	                background-repeat: no-repeat;
+	                background-repeat: no-repeat;*/
+background: -moz-linear-gradient(-45deg, #d2d7db 26%, #6b6c70 63%, #272b3d 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-45deg, #d2d7db 26%,#6b6c70 63%,#272b3d 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(135deg, #d2d7db 26%,#6b6c70 63%,#272b3d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */}
 	            }
 	            
 	            .main {
@@ -27,7 +34,7 @@
 	                position: fixed;
 	                height: 7vh;
 	                background: linear-gradient(to right, #1e5799 0%, #207cca 7%, #207cca 16%, #2989d8 21%, #ffffff 45%);
-	                z-index: 3;
+	                z-index: 5;
 	            }
 	            
 	            .main h1 {
@@ -40,9 +47,10 @@
 	                font-family: 'Jura', sans-serif;
 	            }
 	            
-	            h2 {
+	           .wrapper h2 {
 	                text-align: center;
 	                font-size: 2.5em;
+					margin:30px;
 	            }
 	            
 	            #myFoto {
@@ -57,16 +65,21 @@
 	                font-size: 1.5em;
 	            }
 	            
+				.gallery{
+					font-size: 1.5em;
+	                margin: 5px;
+
+}
+				
+				
 	            .gallery1 {
-	                margin: 4% 0;
+	                margin: 6% 20px;
 	                width: 100vw;
 	                height: 60vh;
+					
 	            }
 	            
-	            .gallery1 h2 {
-	                font-size: 1.5em;
-	                margin: 5px;
-	            }
+	            
 	            
 	            #slides {
 	                list-style-type: none;
@@ -74,7 +87,7 @@
 	            
 	            .slide {
 	                position: absolute;
-	                left: 30vw;
+	                left: 40vw;
 	                opacity: 0;
 	                z-index: 1;
 	                transition: opacity 1s;
@@ -85,26 +98,29 @@
 	                z-index: 2;
 	            }
 	            
-	            .gallery1 img:hover {
-	                scale: 1.5;
-	                transition-duration: 0.5s;
-	                box-shadow: 5px 10px 10px 10px rgba(0, 0, 0, .5);
-	            }
+	            
 	            
 	            .gallery1 img {
-	                width: 20vw;
-	                margin: 10px;
-	            }
+					position:relative;
+					 margin:40px 20px;
+	                 width: 20vw;
+					 box-shadow: 5px 5px 5px 5px rgba(7, 7, 7, 0.5);
+						               	            }
 	            
-	            .gallery1 h2 {
-	                font-size: 1.5em;
-	            }
 	            
-	            .gallery1 p {
-	                font-size: 1.5em;
+	            
+	            .gallery p {
+	                font-size: 1em;
 	                text-align: center;
+					margin:40px;
+
+					
+
 	            }
 	            
+.portfolio{
+margin:3% 0;
+}
 	            .portfolio figure:hover figcaption {
 	                opacity: 1;
 	            }
@@ -113,11 +129,11 @@
 	                position: relative;
 	                display: inline-block;
 	                border: 2px solid gray;
-	                width: 14vw;
-	                margin-left: 7%;
+	                width: 20vw;
+	                margin-left: 10%;
 	                opacity: 1;
 	                box-shadow: 5px 10px 10px 10px rgba(0, 0, 0, .5);
-	                border-radius: 10px;
+	                
 	            }
 	            
 	            .portfolio figcaption {
@@ -168,30 +184,32 @@
 	            }
 	            
 	            .portfolio img {
-	                width: 14vw;
-	                border-radius: 10px;
+	                width: 20vw;
+	               
 	            }
 	            
 	            .gallery2 {
+					
 	                display: block;
 	                position: relative;
 	                width: 980px;
-	                margin: 0 auto;
-	                overflow: hidden;
+	                margin: 160px auto;
+	                overflow: hidden;					
 	            }
 	            
 	            .gallery2 .slides2 {
 	                overflow: hidden;
 	                width: 100%;
-	                height: 640px;
+	                height: 580px;
 	                margin: 0;
 	                padding: 0;
 	                list-style: none;
+
 	            }
 	            
 	            .gallery2 .slides2>li {
 	                width: 100%;
-	                height: 640px;
+	                height: 580px;
 	                position: absolute;
 	                z-index: 1;
 	                overflow: hidden;
@@ -219,7 +237,7 @@
 	            .gallery2 .thumbnails>li {
 	                float: left;
 	                width: 20%;
-	                height: 200px;
+	                
 	            }
 	            
 	            .gallery2 .thumbnails>li>a {
@@ -228,8 +246,8 @@
 	            
 	            .gallery2 .thumbnails>li>a>img {
 	                width: 100%;
-	                height: auto;
-	            }
+					height:auto;		
+	                	            }
 	            
 	            .gallery2 .slides2 li:target {
 	                z-index: 3;
@@ -287,3 +305,12 @@
 	                    transform: translateX(100%);
 	                }
 	            }
+.skills{
+width:100%;
+height:50%;
+}
+
+.skills img{
+width:8%;
+margin:5px 4%;
+}
