--- a/MySite/mob.css
+++ b/MySite/mob.css
@@ -1,59 +1,130 @@
-        /*mobil version start*/
-        
-        @media (max-width:980px) {
-            body,
-            .wrapper {
-                background-image: none;
-                margin: 0;
-                padding: 0;
-                width: 100vw;
-                height: 100%;
-                background: radial-gradient(circle farthest-corner at 190px 70px, rgb(255, 255, 255), rgb(7, 41, 104));
+            /*mobil version start*/
+            
+            @media (max-width:980px) {
+                body,
+                .wrapper {
+                    margin: 0;
+                    padding: 0;
+                    width: 100vw;
+                    height: 100%;
+                    font-size: 0.8em;
+                }
+                header {
+                    font-size: 0.4em;
+                    height: 4vh;
+                }
+                .main h1 {
+                    font-size: 1.8em;
+                    text-align: center;
+                    margin: 3px;
+                    padding: 5px;
+                    width: 100%;
+                    height: 40%;
+                    text-shadow: 0 0 5px rgb(28, 2, 75);
+                }
+                .wrapper .main {
+                    border: 1px solid gray;
+                    margin-bottom: 200%;
+                    ;
+                }
+                .aboutme {
+                    width: 90%;
+                    margin: 15px;
+                    padding: 5px;
+                }
+                .slide {
+                    position: absolute;
+                    left: 0;
+                    width: 90vw;
+                    height: 100vh;
+                }
+                .gallery1 img {
+                    width: 90vw;
+                }
+                .gallery2 {
+                    display: block;
+                    position: relative;
+                    width: 80vw;
+                    margin: 560px auto;
+                    overflow: hidden;
+                }
+                .gallery2 .slides2 {
+                    overflow: hidden;
+                    width: 100%;
+                    height: 42vh;
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                }
+                .gallery2 .slides2>li {
+                    width: 100%;
+                    height: 42vh;
+                    position: absolute;
+                    z-index: 1;
+                    overflow: hidden;
+                }
+                .gallery2 .slides2>li>img {
+                    width: 100%;
+                    height: 50vh;
+                }
+                .gallery2 .slides2>li:first-child:not(:target) {
+                    z-index: 1;
+                    -webkit-transform: translateY(0%);
+                    transform: translateY(0%);
+                }
+                .gallery2 .thumbnails {
+                    display: block;
+                    position: relative;
+                    padding: 0;
+                    margin: 0;
+                    list-style: none;
+                }
+                .gallery2 .thumbnails>li {
+                    float: left;
+                    width: 20%;
+                }
+                .gallery2 .thumbnails>li>a {
+                    display: block;
+                }
+                .gallery2 .thumbnails>li>a>img {
+                    width: 100%;
+                    height: auto;
+                }
+                #contacts {
+                    width: 100vw;
+                    margin-top: 5px;
+                    clear: both;
+                    position: relative;
+                    font-size: 1em;
+                }
+                #myFoto {
+                    width: 90%;
+                    margin: 15% 5%;
+                }
+                .text {
+                    text-indent: .9em;
+                    margin: 35px 25px;
+                }
+                .portfolio figure {
+                    width: 100vw;
+                    margin: 0;
+                    margin-bottom: 5%;
+                    padding: 0;
+                    position: relative;
+                    bottom: 0;
+                    border-radius: 0;
+                }
+                .portfolio img {
+                    width: 100vw;
+                    border-radius: 0;
+                }
+                .portfolio figcaption {
+                    position: relative;
+                    top: 0;
+                    bottom: 0%;
+                    left: 0;
+                    right: 0;
+                    color: white;
+                    opacity: 1;
+                }
             }
-            h1 {
-                font-size: 2em;
-                text-align: center;
-                font-family: Georgia;
-                color: rgb(249, 251, 252);
-                margin: 3px;
-                padding: 5px;
-                text-shadow: 0 0 5px rgb(28, 2, 75);
-            }
-            #contacts {
-                width: 100vw;
-                margin-top: 5px;
-                clear: both;
-                position: relative;
-                font-size: 1em;
-            }
-            #myFoto {
-                width: 90%;
-                margin: 5%;
-            }
-            .text {
-                text-indent: .9em;
-                margin: 35px 25px;
-            }
-            .portfolio figure {
-                width: 100vw;
-                margin: 0;
-                margin-bottom: 5%;
-                padding: 0;
-                position: relative;
-                bottom: 0;
-                border-radius: 0;
-            }
-            .portfolio img {
-                width: 100vw;
-                border-radius: 0;
-            }
-            .portfolio figcaption {
-                position: relative;
-                top: 0;
-                bottom: 0%;
-                left: 0;
-                right: 0;
-                color: white;
-                opacity: 1;
-            }
-        }
