--- a/MySite/style.css
+++ b/MySite/style.css
@@ -17,16 +17,16 @@
 	                }
 	                
 	                .main {
-	                    margin-top: 0;
+	                    margin: 0 auto 8vh auto;
 	                }
 	                
 	                .menu li {
 	                    display: block;
 	                    float: left;
-	                    margin: 5px 0;
+	                    margin: 5px auto;
 	                    font-family: 'Jura', sans-serif;
 	                    font-size: 1.3em;
-	                    width: 16vw;
+	                    width: 15vw;
 	                }
 	                
 	                .menu a {
@@ -41,7 +41,6 @@
 	                header {
 	                    color: white;
 	                    width: 100vw;
-	                    margin-bottom: 130px;
 	                    position: fixed;
 	                    height: 8vh;
 	                    background: -moz-linear-gradient(left, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
@@ -54,10 +53,10 @@
 	                }
 	                
 	                .main h1 {
+						color:white;
+	                    margin: 0 auto;
 	                    font-size: 3em;
 	                    text-align: center;
-	                    width: 70vw;
-	                    height: 50vh;
 	                    padding: 7%;
 	                    text-shadow: 5px 5px 5px rgb(5, 5, 5);
 	                    font-family: 'Jura', sans-serif;
@@ -66,31 +65,39 @@
 	                .wrapper h2 {
 	                    text-align: center;
 	                    font-size: 2.5em;
-	                    margin: 30px;
+	                    margin: 2% auto;
 	                }
 	                
 	                #myFoto {
-	                    width: 20%;
-	                    margin: 40px;
-	                    float: left;
-	                    margin-top: 15vh;
+					   width:20%;	
+					   margin:5%;	                   
 	                }
-	                
+					
+					footer ul{
+						position: relative;
+						top:-300px;
+						left:400px;	
+						color:white;
+						font-size: 2em;
+					}
+					footer a{
+						color:white;
+						
+					}
 	                .aboutme {
 	                    text-indent: .9em;
-	                    padding: 1% 5%;
-	                    font-size: 1.5em;
+	                    padding: 3%;
+	                    margin: 5vh auto;
 	                }
 	                
 	                .gallery {
-	                    font-size: 1.5em;
-	                    margin-bottom: 5px;
+	                    margin: 6% auto;
 	                }
 	                
 	                .gallery1 {
-	                    margin: 6% 20px;
-	                    width: 97vw;
+	                    width: 85vw;
 	                    height: 80vh;
+	                    margin: 6% auto;
 	                }
 	                
 	                #slides {
@@ -99,7 +106,7 @@
 	                
 	                .slide {
 	                    position: absolute;
-	                    left: 40vw;
+	                    left: 38vw;
 	                    opacity: 0;
 	                    z-index: 1;
 	                    transition: opacity 1s;
@@ -111,19 +118,22 @@
 	                }
 	                
 	                .gallery1 img {
-	                    margin: 40px 20px;
+	                    margin: 0 auto;
 	                    width: 24vw;
 	                    box-shadow: 5px 5px 5px 5px rgba(7, 7, 7, 0.5);
 	                }
 	                
 	                .gallery p {
-	                    font-size: 1em;
 	                    text-align: center;
-	                    margin: 40px;
+	                    margin: 1% auto;
+	                }
+	                
+	                .portfolio img {
+	                    width: 30vw;
 	                }
 	                
 	                .portfolio {
-	                    margin: 3% 0;
+	                    margin: 3% auto;
 	                    height: 50vh;
 	                }
 	                
@@ -134,26 +144,26 @@
 	                .portfolio figure {
 	                    position: relative;
 	                    display: inline-block;
-	                    border: 2px solid gray;
-	                    width: 20vw;
-	                    margin-left: 10%;
+	                    width: 30vw;
 	                    opacity: 1;
+	                    margin: 0 1%;
 	                    box-shadow: 5px 10px 10px 10px rgba(0, 0, 0, .5);
 	                }
 	                
 	                .portfolio figcaption {
+	                    margin: 10px auto;
 	                    position: absolute;
 	                    top: 25%;
 	                    bottom: 15%;
 	                    left: 0;
 	                    right: 0;
 	                    background-color: rgba(0, 102, 153, .3);
-	                    padding: 10px;
 	                    font-family: Titillium, Arial, sans-serif;
-	                    font-size: .9em;
+	                    font-size: 1.2em;
 	                    font-weight: 400;
-	                    color: white;
+	                    color: rgb(5, 5, 5);
 	                    opacity: 0;
+	                    padding: 7px;
 	                    -webkit-transition: opacity .75s ease-out;
 	                    -moz-transition: opacity .75s ease-out;
 	                    -o-transition: opacity .75s ease-out;
@@ -163,45 +173,15 @@
 	                figcaption strong {
 	                    font-weight: 700;
 	                    display: block;
-	                }
+	                }        
+	                              
 	                
-	                footer a {
-	                    color: rgb(138, 166, 241);
-	                    -webkit-animation: blink 1s linear infinite;
-	                    animation: blink 1.3s linear infinite;
-	                }
 	                
-	                footer {
-	                    text-align: center;
-	                    -webkit-animation: blink 1s linear infinite;
-	                    animation: blink 1.3s linear infinite;
-	                    font-family: Berlin Sans FB;
-	                    background: -moz-linear-gradient(left, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
-	                    /* FF3.6-15 */
-	                    background: -webkit-linear-gradient(left, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
-	                    /* Chrome10-25,Safari5.1-6 */
-	                    background: linear-gradient(to right, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
-	                    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	                }
-	                
-	                @-webkit-keyframes blink {
-	                    0% {
-	                        color: rgb(0, 0, 255);
-	                    }
-	                    100% {
-	                        color: rgb(255, 255, 255);
-	                    }
-	                }
-	                
-	                .portfolio img {
-	                    width: 20vw;
-	                }
 	                
 	                .gallery2 {
-	                    display: block;
 	                    position: relative;
 	                    width: 980px;
-	                    margin: 160px auto;
+	                    margin: 4% auto;
 	                    overflow: hidden;
 	                }
 	                
@@ -314,7 +294,8 @@
 	                
 	                .skills {
 	                    width: 100%;
-	                    height: 50vh;
+	                    height: auto;
+	                    margin: 0 auto;
 	                }
 	                
 	                .skills img {
@@ -322,20 +303,25 @@
 	                    margin: 5px 4%;
 	                }
 	                
-	                .gallery span {
-	                    widht: 100vw;
-	                    font-size: 0.7em;
-	                    text-align: center;
-	                }
-	                
 	                .sidebar {
 	                    position: fixed;
-	                    right: 2%;
+	                    right: 1%;
 	                    top: 12%;
-	                    width: 14%;
-	                    height: 30%;
+	                    width: 2%;
+	                    height: 5%;
 	                }
 	                
 	                .sidebar img {
-	                    width: 15%;
+	                    width: 100%;
+	                    display: flex;
+	                    flex-direction: column;
+	                }
+	                
+	                .sidebar img:hover {
+	                    scale: 1.3;
+	                    transition-duration: 0.3s;
+	                }
+	                
+	                #menubutton {
+	                    display: none;
 	                }
