--- a/MySite/style.css
+++ b/MySite/style.css
@@ -5,6 +5,7 @@
 	                    background-repeat: no-repeat;
 	                    background-size: cover;
 	                    background-repeat: no-repeat;
+						
 	                }
 	                
 	                .wrapper {
@@ -131,7 +132,6 @@
 	                
 	                .gallery p {
 	                    text-align: center;
-	                    margin: 1% auto;
 	                }
 	                
 	                .portfolio img {
@@ -332,6 +332,7 @@
 	                    display: none;
 					}
 					footer{
+						height:15vh;
 						color:white;
 						text-align: center;
 						background: -moz-linear-gradient(left, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
